[package]
name = "naga_oil_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Construct standalone shaders from modules and definitions using naga_oil (https://github.com/bevyengine/naga_oil)"
repository = "https://github.com/robtfm/naga_oil_cli/"
readme = "README.txt"

[dependencies]
clap = { version = "4.4.13", features = ["env", "derive"] }
naga = { version = "0.14.2", features = ["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "spv-out", "serialize"] }
naga_oil = "0.11.0"
serde_json = "1.0.111"
